<resources>
    <string name="app_name">Sensor_Active_</string>
    <string name="title_activity_main_raspberry">MainRaspberry</string>
    <string name="MainDatabase">MainDatabase</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_main_database">MainDatabase</string>
    <string name="title_activity_connect_raspberry">connectRaspberry</string>
    <string name="sensor_id">Sensor ID</string>
    <string name="sensor_name">Sensor Name</string>
    <string name="bluetooth_address">Bluetooth Address</string>
    <string name="sync_interval">Sync interval</string>
    <string name="status">Status</string>
    <string name="search_for_sensors">Add Sensor</string>
    <string name="_8086">_8086</string>
    <string name="andere">andere</string>
    <string name="name">Name</string>
    <string name="passwort">passwort</string>
    <string name="zeitspanne">Value</string>
    <string name="bucket">Buckets</string>
    <string name="radar_chart">radar_chart</string>
    <string name="pie_chart">pie_chart</string>
    <string name="bar_chart">Lade Daten</string>
    <string name="search_sensor">search Sensor</string>
    <string name="organisations">Organisations</string>
    <string name="password">Password</string>
</resources>