<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Raspberry_Pages.ESP32Sensor">

    <TextView
        android:id="@+id/headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TableLayout
        android:layout_width="409dp"
        android:layout_height="630dp"
        android:layout_marginTop="64dp"
        android:stretchColumns="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headline">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="52dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/sensor_id"

                />

            <EditText
                android:id="@+id/sensorIDXML"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Sensor ID"
                android:width="250dp"
                android:inputType="text"
                android:enabled="false"

                />


        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/sensor_name" />

            <EditText
                android:id="@+id/sensorNameXML"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Sensor ID"
                android:inputType="text"
                />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/bluetooth_address" />

            <EditText
                android:id="@+id/sensorBluetooth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Bluetooth ID"
                android:inputType="text"
                android:enabled="false"
                />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="52dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/sync_interval"

                />

            <EditText
                android:id="@+id/sensorIntervall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Sync Interval"
                android:width="250dp"
                android:inputType="number"
                />


        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="52dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/status"

                />

            <EditText
                android:id="@+id/sensorStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Sensor ID"
                android:width="250dp"
                android:inputType="text"
                android:enabled="false"
                />


        </TableRow>


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:id="@+id/sendChanges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="changes"
                android:layout_column="2"
                android:text="Submit" />
        </TableRow>

    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>